[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SequenceMC"
version = "0.0.2"
authors = [
  { name="Sam Berry", email="sberry@g.harvard.edu" },
]
description = "Monte Carlo samplers for aligned biological sequences"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.isort]
profile = "black"
src_paths = "SequenceMC"
multi_line_output = 3

[tool.pydocstyle]
match_dir = "SequenceMC"
convention = "numpy"

[project.urls]
"Homepage" = "https://github.com/samberry19/SequenceMC"
"Bug Tracker" = "https://github.com/samberry19/SequenceMC/issues"
